[gd_scene load_steps=2 format=3 uid="uid://dg60px6f87gmp"]

[ext_resource type="Script" path="res://Scenes/Lobby.gd" id="1_2uifv"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2uifv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(360, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -152.0
offset_right = 180.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Placeholder"

[node name="LobbyTitle" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "Lobby Title"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Player1" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Player1"]
layout_mode = 2
text = "Player 1"

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/Player1"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Player2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Player2"]
layout_mode = 2
text = "Player 2"

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/Player2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Player3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Player3"]
layout_mode = 2
text = "Player 3"

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/Player3"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Player4" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Player4"]
layout_mode = 2
text = "Player 3"

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/Player4"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="ReconnectButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Reconnect"

[node name="WaitingLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Waiting for host to start..."
horizontal_alignment = 1
